fixed some programme spacing things, shuffled activities

--- a/site/src/scss/style.scss
+++ b/site/src/scss/style.scss
@@ -156,18 +156,19 @@ table.t-6 {
     border-left: 0;
   }
 
+  tr:last-of-type {
+    border-bottom: ($table-border-width * 2) solid lighten($table-border-color, 5%);
+  }
+
   tr.now, tr.now td, td.now {
     background-color: theme-color-level("info", $table-bg-level) !important;
     border-color: lighten(theme-color-level("info", $table-border-level), 5%) !important;
   }
 
-  // td.empty {
-  //   background-color: $table-hover-bg;
-  // }
-}
+  td.empty {
+    background-color: darken($gray-100, 2%);
+  }
 
-.timetable:first-of-type {
-  margin-bottom: 100px;
 }
 
 .gallery-card {
